force-app/main/default/objects/ccrz__E_ProductGuide__c/ccrz__E_ProductGuide__c.object-meta.xml
<CustomObject>
    <label>CC Product Guide</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Product Guide Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Guides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>