force-app/main/default/objects/ccrz__E_ProductGuide__c/fields/ccrz__DisplayType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DisplayType__c</fullName>
    <description>Drives the display of this guide in the UI</description>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single-Select</fullName>
            </value>
            <value>
                <fullName>Single-Select Quantity</fullName>
            </value>
            <value>
                <fullName>Multi-Select</fullName>
            </value>
            <value>
                <fullName>Multi-Select Quantity</fullName>
            </value>
            <value>
                <fullName>Image-Select</fullName>
            </value>
            <value>
                <fullName>Image-Select Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>