force-app/main/default/objects/ccrz__E_ProductGuide__c/fields/ccrz__ProductGuideId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ProductGuideId__c</fullName>
    <externalId>true</externalId>
    <label>ProductGuideId</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>