force-app/main/default/objects/ccrz__E_ProductGuide__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>ccrz__Product__c</columns>
    <columns>ccrz__RelatedProductGroup__c</columns>
    <columns>ccrz__DisplayType__c</columns>
    <columns>ccrz__Required__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>